# studystreak

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  sheet.rs
src/io/: init_io.rs  io_module.rs  io_root.rs  io_sheet.rs  io_task.rs  mod.rs  read_modules.rs
src/structs/: app_state.rs  attempt.rs  mod.rs  module.rs  sheet.rs  task.rs
test/assets/: test_modules.json
ui/: appwindow.slint  global.slint
ui/components/: attempt_square.slint  line_edit.slint  module_tile.slint  page_header.slint  progressbar.slint  sheet_entry.slint  task_entry.slint
ui/containers/: module_grid.slint  module_tile.slint  search_bar.slint  sheet_list.slint
ui/pages/: main_page.slint  module_page.slint  sheet_page.slint  start_page.slint
ui/structs/: module.slint  progress_values.slint  sheet.slint  style.slint  task.slint  topic.slint
