[package]
name = "study-streak"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.4"
serde = {version="1.0.197", features=["derive"]}
serde_yaml = "0.9.34"
slint = "1.4"

[build-dependencies]
slint-build = "1.4"
